<resources>
    <string name="app_name">Eternal</string>
    <string name="app_name_lowercase">eternal</string>
    <string name="action_settings">Settings</string>
    <string name="menu_delete_match">Delete match</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="dlg_loading">Loading</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>

    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Eternal</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="new_pair">You\'ve got new pair!</string>
    <string name="matched_users">Matched users</string>
    <string name="matched_messages">Messages</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="login_with_facebook">Login with facebook</string>

    <string name="Next">Next</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="question_6">Question 6</string>
    <string name="results">Results</string>
    <string name="exit">Exit</string>
    <string name="perceiving">Perceiving:</string>
    <string name="feeling">Feeling:</string>
    <string name="intuition">Intuition:</string>
    <string name="extroversion">Extroversion:</string>
    <string name="judging">Judging:</string>
    <string name="thinking">Thinking:</string>
    <string name="sensing">Sensing:</string>
    <string name="introversion">Introversion</string>
    <string name="result">Result:</string>
    <string name="minimum_match_value">Minimum match value:</string>
    <string name="show_me">Show me:</string>
    <string name="men">Men</string>
    <string name="maximum_distance">Maximum distance:</string>
    <string name="age_range">Age range:</string>
    <string name="logout">Logout</string>
    <string name="start_swiping">Start swiping to match with other users!</string>
    <string name="no_more_matches">There is no one more around you! Expand maximum discovery distance your settings!</string>
    <string name="chat_matched_with_message">You matched with </string>
    <string name="women">Women</string>
    <string name="Men">Men</string>
    <string name="men_and_women">Men and women</string>
</resources>
