<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eternalsrv.ui.TestFragment">

    <ScrollView
        android:id="@+id/test_container_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:overScrollMode="never">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/activity_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:context="com.eternalsrv.Test">

            <com.kofigyan.stateprogressbar.StateProgressBar
                android:id="@+id/pageProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spb_checkStateCompleted="true"
                app:spb_currentStateDescriptionColor="@color/primary_purple"
                app:spb_currentStateNumber="one"
                app:spb_maxStateNumber="four"
                app:spb_stateBackgroundColor="#BDBDBD"
                app:spb_stateDescriptionColor="#808080"
                app:spb_stateForegroundColor="@color/primary_purple"
                app:spb_stateNumberBackgroundColor="#808080"
                app:spb_stateNumberForegroundColor="#eeeeee" />

            <TextView
                android:id="@+id/TextQ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pageProgressBar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/question_1"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/sliderQ1Container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/TextQ1"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/seekbarSpace">

                    <SeekBar
                        android:id="@+id/sliderQ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:max="100"
                        android:progress="50" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/TextQ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sliderQ1Container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/question_2"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/sliderQ2Container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/TextQ2"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/seekbarSpace">

                    <SeekBar
                        android:id="@+id/sliderQ2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:max="100"
                        android:progress="50" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/TextQ3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sliderQ2Container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/question_3"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/sliderQ3Container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/TextQ3"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/seekbarSpace">

                    <SeekBar
                        android:id="@+id/sliderQ3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:max="100"
                        android:progress="50" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/TextQ4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sliderQ3Container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/question_4"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/sliderQ4Container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/TextQ4"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_weight="@integer/seekbarSpace">

                    <SeekBar
                        android:id="@+id/sliderQ4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:max="100"
                        android:progress="50" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/TextQ5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sliderQ4Container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/question_5"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/sliderQ5Container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/TextQ5"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/seekbarSpace">

                    <SeekBar
                        android:id="@+id/sliderQ5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:max="100"
                        android:progress="50" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/TextQ6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sliderQ5Container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/question_6"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textSize="@dimen/_16sdp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/sliderQ6Container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/TextQ6"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/seekbarSpace">

                    <SeekBar
                        android:id="@+id/sliderQ6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:max="100"
                        android:progress="50" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/sideSpace"></RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/nextQuestions"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sliderQ6Container"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/facebook_login_button"
                android:backgroundTint="@color/primary_blue"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Next"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
